--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <span>#002</span>
                         </div>
 
-                        <span class="tipo">Agua</span>
+                        <span class="tipo">água</span>
 
                         <div class="cartao-imagem">
                             <img src="./src/imagens/scriptle.png" alt="Scriptle"/>
